CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(SJTU-RM-CV)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_BUILD_TYPE RELEASE)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPATH=\"\\\"${PROJECT_SOURCE_DIR}\\\"\"")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D${CMAKE_SYSTEM_NAME}")
SET(CMAKE_BUILD_TYPE Debug)
SET(BIN_NAME "run")


FIND_FILE(CONFIG_FOUND "config.h" "others/include/config")
if (CONFIG_FOUND)
    MESSAGE("Found config.h")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWITH_CONFIG")
endif()

FIND_PACKAGE(Threads)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Log/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Coroutine/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Socket/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/utility/include)


FILE(GLOB_RECURSE sourcefiles "test/test_server.cpp" "Log/src/*.cpp" "Coroutine/src/*.cpp" "Socket/src/*.cpp" "utility/src/*.cpp")
ADD_EXECUTABLE(${BIN_NAME} ${sourcefiles})

TARGET_LINK_LIBRARIES(${BIN_NAME} ${CMAKE_THREAD_LIBS_INIT})